# crypt_gost

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
cmake/: system.cmake
crypt_gost/: CMakeLists.txt
crypt_gost/core/: CMakeLists.txt
crypt_gost/core/allocator/: CMakeLists.txt
crypt_gost/core/allocator/allocator/: allocator.c  allocator_fn.cpp  allocator_fn.h  heap_allocator.cpp  stack_allocator.cpp
crypt_gost/core/allocator/heap_manager/: heap_chunk.c  heap_manager.c  ptr_helper.h
crypt_gost/internal_include/core/allocator/: allocator.h  default_allocator.hpp  heap_allocator.hpp  i_allocator.hpp  secure_allocator.hpp  stack_allocator.hpp
crypt_gost/internal_include/core/allocator/heap_manager/: heap_chunk.h  heap_manager.h  helper.h
crypt_gost/internal_include/core/math/: math.hpp  mem_buf.hpp
crypt_gost/internal_include/core/util/: mem_buf.hpp  traits.hpp
crypt_gost/test/: CMakeLists.txt
crypt_gost/test/core_test/: allocator_test.cpp  math.cpp  math_addition_test.cpp  math_multiplication_test.cpp
include/allocator/: heap_allocator.hpp  heap_chunk.h  heap_manager.h  i_allocator.hpp  stack_allocator.hpp
math/: num256.c  num256.h
